	  and write buffering that can be used in any block driver.
	* include/nuttx/wqueue.h -- Added a generic worker thread that can used to
	  defer processing from an interrupt to a task.
	* include/nuttx/sdio.h -- Defines a generic SD/SDIO interface can can be
	  bound to a MMC/SD driver to provide SDIO-based MMC/SD support.
	* drivers/mmcsd/mmcsd_sdio.c -- Provides a an SDIO-based MMC/SD driver.
	* arch/arm/src/stm32/stm32_sdio.c -- Provides an STM32 implementation of
	  the SDIO interface defined in include/nuttx/sdio.h.
	* fs/fs_mount.c -- Correct error handling logic.  If the bind() method
	  fails, then a reserved node is left in the tree.	This causes subsequent
	  attempts to mount at the location to fail (reporting that the node
	  already exists).	This is a problem for block drivers for removable
	  media: The bind method could fail repeatedly until media is inserted.
	* arch/arm/src/stm32/chip.h & stm32_dma.c -- Fixed several definitions
	  that can cause compilation errors when DMA2 is enabled.
	* arch/arm/src/stm32/stm32_dma.c - Integrated and debugged STM32 DMA
	  functionality that was added in 0.4.12.
	* configs/stm3210e-eval/usbstorage - Add a configuration to exercise
	  the STM32 with the USB mass storage device class example
	  (examples/usbstorage).
	* configs/mcu123-lpc214x/up_usbstrg - Move LPC-specific code from
	  examples/usbstorage to configs/mcu123-lpc214x.
	* configs/stm321e-eval/up_usbstrg - Add STM32-specific logic for the
	  examples/usbstorage test.
	* arch/arm/src/stm32/stm32_usbdev.c - Fix bugs in STM32 USB device-side
	  driver:  (1) Need to disconnect after reset received, (2) Status setup
	  to recover from stall on TX endpoint.

2010.1 2010-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* arch/hc: Adding framework to support m68hc11/12
	* configs/demo9s12ne64: Configuration to support Freescale DEMO9S12NE64
	  development board (MC9S12NE64 m68hcs12 processor).
